[awscurl] Removes commons-io and commons-codec dependency (#1410)